--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "tolgaucar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express-handlebars": "^6.0.7",
     "express.js": "^1.0.0",
     "mongoose": "^6.9.2"
