--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "express.js": "^1.0.0",
     "mongoose": "^6.9.2"
   }
