--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongo": "^3.2.0",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
