--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
     "express.js": "^1.0.0",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "notiflix": "^3.2.6"
   }
 }
